--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -24,7 +24,7 @@
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  width: 80%;
+  width: 60%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
@@ -46,7 +46,7 @@
 /* The Close Button */
 .close {
   color: white;
-  float: right;
+  float: left;
   font-size: 28px;
   font-weight: bold;
 }
@@ -60,7 +60,7 @@
 
 .modal-header {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: #e6f2ff;
   color: white;
 }
 
@@ -68,6 +68,6 @@
 
 .modal-footer {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: #f5f9fd;
   color: white;
 }
