--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -17,7 +17,7 @@
 .modalx-content {
   z-index: 9999; /* Sit on top */
   position: relative;
-  display: block;;
+  display: block;
   justify-content: initial;
   align-items: initial;
   background-color: #fefefe;
@@ -62,6 +62,8 @@
   padding: 2px 16px;
   color: white;
   background-image: url('../img/feedback.png');
+  width: 400px;
+  height: 300px;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;    
