--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -62,7 +62,7 @@
   padding: 2px 16px;
   color: white;
   background-image: url('../img/feedback.png');
-  width: 400px;
+  width: 60%;
   height: 300px;
   background-size: contain;
   background-position: center;
