--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -24,12 +24,23 @@
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  width: 40%;
+  width: 50%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
   animation-duration: 0.4s
+}
+@media (max-width: 768px) {
+  .modalx-content {
+    width: 90%;
+  }
+}
+
+@media (max-width: 480px) {
+  .modalx-content {
+    width: 95%;
+  }
 }
 
 /* Add Animation */
