--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -1,19 +1,21 @@
 .modalx {
-  display: none; 
-  position: fixed; 
-  z-index: 9999; 
-  padding-top: 100px; 
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 .modalx-content {
-  z-index: 9999; 
+  z-index: 9999;
   position: relative;
   display: block;
   justify-content: initial;
@@ -23,12 +25,13 @@
   padding: 0;
   border: 1px solid #888;
   width: 50%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
   animation-duration: 0.4s
 }
+
 @media (min-width: 768px) and (max-width: 1024px) {
   .modalx-content {
     width: 90%;
@@ -43,28 +46,42 @@
 
 /* Add Animation */
 @-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0
+  }
+
+  to {
+    top: 0;
+    opacity: 1
+  }
 }
 
 @keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0
+  }
+
+  to {
+    top: 0;
+    opacity: 1
+  }
 }
 
 /* The Close Button */
 .closex {
-    color: red;
-    float: right;
-    font-size: 36px;
-    font-weight: bold;
-    border-radius: 10px;
-    border: 1px solid #F00;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    vertical-align: middle;
-    text-align: center;
+  color: red;
+  float: right;
+  font-size: 36px;
+  font-weight: bold;
+  border-radius: 10px;
+  border: 1px solid #F00;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  vertical-align: middle;
+  text-align: center;
 }
 
 .closex:hover,
@@ -81,14 +98,24 @@
   height: 200px;
   background-size: contain;
   background-position: center;
-  background-repeat: no-repeat;    
+  background-repeat: no-repeat;
 
 }
 
-.modalx-body {padding: 2px 16px;}
+.modalx-body {
+  padding: 2px 16px;
+}
 
 .modalx-footer {
   padding: 2px 16px;
   background-color: #333333;
   color: white;
+}
+
+.div-container {
+  width: 100%;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
