--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -8,9 +8,8 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
-  border-radius: 10px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 
 .modalx-content {
@@ -109,12 +108,4 @@
   padding: 2px 16px;
   background-color: #333333;
   color: white;
-}
-
-.div-container {
-  width: 100%;
-  background: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-  overflow: auto;
 }
