--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -26,7 +26,9 @@
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
+  text-align: center;
+
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
