--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -15,7 +15,7 @@
   margin: auto;
   padding: 20px;
   width: 80%;
-  max-width: 500px;
+  max-width: 800px;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
   position: relative;
@@ -83,9 +83,8 @@
 
 .modalx-header {
   padding: 2px 16px;
-  color: white;
-  background-image: url('../img/feedback.png');
-  height: 200px;
+  color: rgb(0, 0, 0);
+  height: auto;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -101,4 +100,30 @@
   padding: 2px 16px;
   background-color: #333333;
   color: white;
+}
+
+.LDimage-container {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.LDimage-container img {
+  width: 166px;
+  height: 166px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.Starimage-container {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.Starimage-container img {
+  width: auto;
+  height: 166px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
