--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -131,3 +131,27 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
+#webcam {
+            width: 480px;
+            height: 360px;
+            border: 1px solid black;
+        }
+
+        #output_canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+        }
+
+        #gesture_output {
+            display: none;
+            position: absolute;
+            bottom: 40px;
+            left: 10px;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 10px;
+            font-size: 18px;
+        }
