--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -136,6 +136,8 @@
             width: 480px;
             height: 360px;
             border: 1px solid black;
+            margin: 0 auto;
+  
         }
 
         #output_canvas {
