--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -24,18 +24,16 @@
 }
 
 #webcam {
-  width: 480px;
-  height: 360px;
-  border: 1px solid black;
-  text-align: center;
+  width: 480px !important;
+  height: 360px !important;
+  border: 1px solid black !important;
 }
 
 #output_canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  text-align: center;
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  z-index: 1 !important;
 }
 
 #gesture_output {
