--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -42,7 +42,7 @@
   display: none;
   position: absolute;
   bottom: 100px;
-  left: 10px;
+  right: 10px;
   color: white;
   background-color: rgba(0, 0, 0, 0.7);
   padding: 10px;
