--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -23,20 +23,27 @@
   transform: translateY(-50%);
 }
 
+#webcam-container {
+    position: relative; 
+    width: 480px;
+    height: 360px;
+}
+
 #webcam {
-  width: 480px;
-  height: 360px;
-  border: 1px solid black;
-  text-align: center;
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
+    text-align: center;
 }
 
 #output_canvas {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1; 
+    text-align: center;
 }
+
 
 #gesture_output {
   display: none;
