--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -111,8 +111,9 @@
 }
 
 .LDimage-container img {
-  max-width: 100%;
-  height: auto;
+
+  width:166px;
+  height: 166px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
