--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -141,8 +141,8 @@
 
 #gesture_output {
   display: none;
-  position: absolute;
-  bottom: 300px;
+  position: fixed;
+  top:20px;
   right: 10px;
   color: white;
   background-color: rgba(0, 0, 0, 0.7);
