--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -142,7 +142,7 @@
 #gesture_output {
   display: none;
   position: absolute;
-  top:20px;
+  bottom: 300px;
   right: 10px;
   color: white;
   background-color: rgba(0, 0, 0, 0.7);
