--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -141,9 +141,11 @@
 
 #gesture_output {
   display: none;
-  position: absolute;
-  bottom: 300px;
-  right: 10px;
+   position: absolute; 
+    top: 0;
+    right: 0;
+    z-index: 1; 
+    text-align: center;
   color: white;
   background-color: rgba(0, 0, 0, 0.7);
   padding: 10px;
